[package]
name = "chrome_driver"
version = "0.1.0-canary"
edition = "2021"
description = "Chrome proxy API to manage chrome in Cloud Providers"
license = "MIT"

[dependencies]
hyper = "0.14.27"
lazy_static = "1.4.0"
tokio = { version = "^1.29.1", features = ["macros", "rt-multi-thread"] }
warp = "0.3.5"
