[package]
name = "chrome_driver"
version = "0.1.6"
edition = "2021"
description = "API to manage chromium headless processes."
license = "MIT"
repository = "https://github.com/a11ywatch/chrome"
keywords = ["chrome", "chromium-api", "chrome-sidecar", "chrome-fargate", "chrome-lambda"]
categories = ["web-programming", "command-line-utilities"]
authors = ["Jeff Mendez <jeff@a11ywatch.com>"]

[dependencies]
hyper = "0.14.27"
lazy_static = "1.4.0"
tokio = { version = "^1.29.1", features = ["macros", "rt-multi-thread"] }
warp = "0.3.5"
